Refactor all time/date scalars to new function registry